codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__custom_model_display_name_reasoning.snap
---
source: tui/src/chatwidget/tests/model_display_name_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Select Reasoning Level for GPT-5.6 Luna


  1. Low                       Quick answers
› 2. High (default) (current)  Deeper reasoning

  enter default · s session · esc back
